<resources>
    <string name="app_name">Calculadora</string>
    <string name="action_settings">Settings</string>
    <string name="number_01">1</string>
    <string name="number_02">2</string>
    <string name="number_03">3</string>
    <string name="number_04">4</string>
    <string name="number_05">5</string>
    <string name="number_06">6</string>
    <string name="number_07">7</string>
    <string name="number_08">8</string>
    <string name="number_09">9</string>
    <string name="number_00">0</string>
    <string name="number_plus">+</string>
    <string name="number_equals">=</string>
    <string name="btn_clear">CA</string>
    <string name="btn_rest">-</string>
    <string name="btn_mult">X</string>
    <string name="btn_div">/</string>
</resources>
