<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.nxiz.android.calculadora.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.813" />

    <EditText
        android:id="@+id/txtDisplay"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <Button
        android:id="@+id/btn01"
        android:layout_width="82dp"
        android:layout_height="31dp"
        android:text="@string/number_01"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintVertical_bias="0.193"/>

    <Button
        android:id="@+id/btn02"
        android:layout_width="77dp"
        android:layout_height="31dp"
        android:text="@string/number_02"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintVertical_bias="0.193" />

    <Button
        android:id="@+id/btn03"
        android:layout_width="85dp"
        android:layout_height="31dp"
        android:text="@string/number_03"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintVertical_bias="0.192"/>

    <Button
        android:id="@+id/btn04"
        android:layout_width="83dp"
        android:layout_height="28dp"
        android:text="@string/number_04"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/btn05"
        android:layout_width="77dp"
        android:layout_height="29dp"
        android:text="@string/number_05"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintVertical_bias="0.286" />

    <Button
        android:id="@+id/btn06"
        android:layout_width="83dp"
        android:layout_height="27dp"
        android:text="@string/number_06"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintVertical_bias="0.284" />

    <Button
        android:id="@+id/btn07"
        android:layout_width="83dp"
        android:layout_height="24dp"
        android:text="@string/number_07"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintVertical_bias="0.374"/>

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_plus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.289"/>

    <Button
        android:id="@+id/btnEquals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.179"/>

    <Button
        android:id="@+id/btn08"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:text="@string/number_08"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.342"
        app:layout_constraintVertical_bias="0.372"/>

    <Button
        android:id="@+id/btnClear"
        android:layout_width="88dp"
        android:layout_height="28dp"
        android:text="@string/btn_clear"
        android:background="@color/baground_olor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintVertical_bias="0.687" />

    <Button
        android:id="@+id/btnRest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_rest"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.393"/>

    <Button
        android:id="@+id/btnMult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_mult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.498"/>

    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_div"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.945"
        app:layout_constraintVertical_bias="0.613"/>


</android.support.constraint.ConstraintLayout>
